--- a/app/src/main/res/menu/cart.xml
+++ b/app/src/main/res/menu/cart.xml
@@ -5,5 +5,9 @@
         android:icon="@drawable/ic_cart"
         android:title="Cart"
         app:showAsAction="always"/>
+    <item android:id="@+id/myOrder"
+        android:title="MyOrder"/>
+    <item android:id="@+id/logOut"
+        android:title="Logout"/>
 
 </menu>
