--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="backgroundColor">#E8E8E8</color>
 
     <color name="orange">#FF5722</color>
+    <color name="lightOrange">#FFE4DC</color>
+    <color name="darkOrange">#601600</color>
 </resources>
